# Jobber-Crawler

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_create_scraped_jobs.py
deploy/: deploy.sh  nginx.conf  setup-claude-code.sh
src/jobber_crawler/: config.py  database.py  main.py
src/jobber_crawler/adapters/: base.py  greenhouse.py  indeed.py  linkedin.py  naukri.py  registry.py  workday.py
src/jobber_crawler/api/: deps.py  routes.py
src/jobber_crawler/mappers/: base.py  greenhouse.py  indeed.py  linkedin.py  naukri.py  workday.py
src/jobber_crawler/models/: scraped_job.py
src/jobber_crawler/scheduler/: tasks.py
src/jobber_crawler/schemas/: job.py
src/jobber_crawler/services/: crawler_service.py  job_store.py
src/jobber_crawler/utils/: logging.py  rate_limiter.py  retry.py
